Attempted to stylize it more but ran into too many issue. Stuck with only compass for now

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -14,6 +14,13 @@ body {
 #registration {
   padding: 2em;
 }
+.compassImage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 19em;
+  height: 19em;
+}
 
 .category {
   display: flex;
